--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -164,7 +164,7 @@
                                     &lt; </button>
                                     <div class="ml-auto flex gap-5 h-5 mb-2">
                                         <button id="calendar_Year" class="hover:bg-gray-200 dark:hover:bg-gray-600 rounded-2xl cursor-pointer hover:scale-110 w-10 h-8 duration-500"></button>
-                                        <div id="calendar_Year_choice" class="absolute border bg-gray-300 top-10 left-1/2 -translate-x-1/2 w-60 h-30"></div>
+                                        <div id="calendar_Year_choice" class="hidden absolute border bg-gray-300 top-10 left-1/2 -translate-x-1/2 w-60 h-30"></div>
                                         <button id="calendar_Month" class="hover:bg-gray-200 dark:hover:bg-gray-600 rounded-2xl cursor-pointer hover:scale-110 w-10 h-8 duration-500"></button>
                                     </div>
                                 <button id="nextMonthBtn"
@@ -196,6 +196,7 @@
                 <p>© 2026 개인 개발 블로그. All rights reserved.</p>
             </div>
         </div>
+        <script src="/components/devLog/calendarYearBtn.js"></script>
         <script type="module" src="/components/devLog/calender.js" defer></script>
         <script type="module" src="/components/darkmode/darkmode_index.js" defer></script>
         <script src="/components/searchBtn.js"></script>
