--- a/pages/about.html
+++ b/pages/about.html
@@ -161,7 +161,8 @@
                 </div>
             </section>
         </div>
-
+    </div>
+    
         <section id="introduction_section_6" class="snap-start h-screen pt-20">
             <div class="footer flex h-full dark:bg-gray-900 dark:text-gray-200">
                 <div class="flex items-center gap-3 p-10">
