캘린더 월 선택 버튼클릭시 이벤트 동작

--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -179,18 +179,18 @@
                                             <button id="calendarYearRightBtn" class="rounded-xl w-10 cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600">&gt;</button>
                                         </div>
                                         <div id="calendarMonthcontents" class="hidden grid grid-cols-4 place-items-center gap-5">
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">1월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">2월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">3월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">4월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">5월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">6월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">7월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">8월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">9월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">10월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">11월</button>
-                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">12월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">1</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">2</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">3</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">4</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">5</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">6</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">7</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">8</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">9</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">10</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">11</span>월</button>
+                                            <button class="border border-gray-400 rounded-xl h-15 w-15 dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="choicemonth">12</span>월</button>
                                         </div>
                                     </div>
                                 </div>
