--- a/pages/about.html
+++ b/pages/about.html
@@ -90,6 +90,10 @@
                             alt="delete-sign--v1" />
                     </button>
                 </div>
+                <div class="flex justify-center items-center gap-30 pl-10 pr-10 pt-4 pb-4 text-lg border-b border-gray-700">
+                    <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./login.html">로그인</a>
+                    <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./signup.html">회원가입</a>
+                </div>
                 <ul class="flex flex-col gap-12 mt-5 mb-5 text-2xl p-5">
                     <li><a href="./index.html" class="hover:text-gray-500 dark:hover:text-gray-500">Home</a></li>
                     <li><a href="./about.html" class="hover:text-gray-500 dark:hover:text-gray-500">About</a></li>
