--- a/pages/login.html
+++ b/pages/login.html
@@ -92,6 +92,10 @@
                         alt="delete-sign--v1" />
                 </button>
             </div>
+            <div class="flex justify-center items-center gap-30 pl-10 pr-10 pt-4 pb-4 text-lg border-b border-gray-700">
+                <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./login.html">로그인</a>
+                <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./signup.html">회원가입</a>
+            </div>
             <ul class="flex flex-col gap-12 mt-5 mb-5 text-2xl p-5">
                 <li><a href="./index.html" class="hover:text-gray-500 dark:hover:text-gray-500">Home</a></li>
                 <li><a href="./about.html" class="hover:text-gray-500 dark:hover:text-gray-500">About</a></li>
@@ -141,7 +145,7 @@
                                     class="w-4 h-4 text-blue-500 rounded focus:ring-2 focus:ring-blue-500" />
                                 <span class="ml-2 text-sm text-gray-600 dark:text-gray-400">로그인 유지</span>
                             </label>
-                            <a href="#" class="text-sm text-blue-500 hover:text-blue-700 dark:hover:text-blue-300">
+                            <a href="./forgot-password.html" class="text-sm text-blue-500 hover:text-blue-700 dark:hover:text-blue-300">
                                 비밀번호 찾기
                             </a>
                         </div>
