firebase 연동 - 구글 로그인 - 깃허브 로그인

--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -154,9 +154,9 @@
                         <div id="sign_out">
                             <div class="flex flex-grow justify-center items-center gap-4 mt-5">
                                 <a href="./login.html"
-                                    class="cursor-pointer border w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">로그인</a>
-                                <button
-                                    class="cursor-pointer border w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">회원가입</button>
+                                    class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">로그인</a>
+                                <a href="./signup.html"
+                                    class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">회원가입</a>
                             </div>
                         </div>
                     </div>
