--- a/pages/login.html
+++ b/pages/login.html
@@ -166,13 +166,13 @@
 
                     <!-- 소셜 로그인 -->
                     <div class="space-y-3">
-                        <button
+                        <button id="googleLogin"
                             class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
                             <img width="20" height="20" src="https://img.icons8.com/color/96/google-logo.png"
                                 alt="google-logo" />
                             <span class="text-gray-700 dark:text-gray-300">Google로 로그인</span>
                         </button>
-                        <button
+                        <button id="githubLogin"
                             class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
                             <img width="20" height="20" src="https://img.icons8.com/color/96/github--v1.png"
                                 alt="github--v1" />
