--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -94,9 +94,11 @@
                             alt="delete-sign--v1" />
                     </button>
                 </div>
-                <div class="flex justify-center items-center gap-30 pl-10 pr-10 pt-4 pb-4 text-lg border-b border-gray-700">
-                    <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./login.html">로그인</a>
-                    <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./signup.html">회원가입</a>
+                <div class="flex items-center pt-4 pb-4 text-lg border-b border-gray-700">
+                    <button id="logout" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500">로그아웃</button>
+                    <button id="user" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500">내정보</button>
+                    <a id="login" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="./login.html">로그인</a>
+                    <a id="signup" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="./signup.html">회원가입</a>
                 </div>
                 <ul class="flex flex-col gap-12 mt-5 mb-5 text-2xl p-5">
                     <li><a href="./index.html" class="hover:text-gray-500 dark:hover:text-gray-500">Home</a></li>
@@ -143,7 +145,7 @@
                         </div>
                         
                         <!-- 로그인 후에 오픈 -->
-                        <div class="hidden flex flex-grow justify-center items-center gap-4">
+                        <div id="DevLogActionSignedIn" class="flex flex-grow justify-center items-center gap-4">
                             <button
                                 class="cursor-pointer border w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">글쓰기</button>
                             <button
@@ -151,16 +153,13 @@
                         </div>
 
                         <!--로그인 안되어있을때 오픈-->
-                        <div id="sign_out">
-                            <div class="flex flex-grow justify-center items-center gap-4 mt-5">
-                                <a href="./login.html"
-                                    class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">로그인</a>
-                                <a href="./signup.html"
-                                    class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">회원가입</a>
-                            </div>
+                        <div id="DevLogActionSignedOut" class="flex flex-grow justify-center items-center gap-4 mt-5">
+                            <a href="./login.html"
+                                class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">로그인</a>
+                            <a href="./signup.html"
+                                class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">회원가입</a>
                         </div>
                     </div>
-
                     <!--달력-->
                     <div class="flex flex-col justify-center items-center m-2">
                         <div class="border rounded-xl w-90 p-2 bg-gray-100 dark:bg-gray-700">
@@ -229,6 +228,9 @@
         <script src="/components/searchBtn.js"></script>
         <script src="/components/menuBtn.js"></script>
         <script type="module" src="/src/main.js"></script>
+        <script type="module" src="/components/login/logOut.js"></script>
+        <script type="module" src="/components/login/loginState.js"></script>
+        <script type="module" src="/components/login/devLog_loginState.js"></script>
 </body>
 
 </html>
