--- a/pages/login.html
+++ b/pages/login.html
@@ -92,9 +92,11 @@
                         alt="delete-sign--v1" />
                 </button>
             </div>
-            <div class="flex justify-center items-center gap-30 pl-10 pr-10 pt-4 pb-4 text-lg border-b border-gray-700">
-                <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./login.html">로그인</a>
-                <a class="hover:text-gray-500 dark:hover:text-gray-500" href="./signup.html">회원가입</a>
+            <div class="flex items-center pt-4 pb-4 text-lg border-b border-gray-700">
+                <button id="logout" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500">로그아웃</button>
+                <button id="user" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500">내정보</button>
+                <a id="login" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="./login.html">로그인</a>
+                <a id="signup" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="./signup.html">회원가입</a>
             </div>
             <ul class="flex flex-col gap-12 mt-5 mb-5 text-2xl p-5">
                 <li><a href="./index.html" class="hover:text-gray-500 dark:hover:text-gray-500">Home</a></li>
@@ -167,13 +169,13 @@
                     <!-- 소셜 로그인 -->
                     <div class="space-y-3">
                         <button id="googleLogin"
-                            class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
+                            class="w-full py-2 px-4 border border-gray-300 hover:cursor-pointer dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
                             <img width="20" height="20" src="https://img.icons8.com/color/96/google-logo.png"
                                 alt="google-logo" />
                             <span class="text-gray-700 dark:text-gray-300">Google로 로그인</span>
                         </button>
                         <button id="githubLogin"
-                            class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
+                            class="w-full py-2 px-4 border border-gray-300 hover:cursor-pointer dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
                             <img width="20" height="20" src="https://img.icons8.com/color/96/github--v1.png"
                                 alt="github--v1" />
                             <span class="text-gray-700 dark:text-gray-300">GitHub로 로그인</span>
@@ -196,6 +198,9 @@
     <script src="/components/searchBtn.js"></script>
     <script src="/components/menuBtn.js"></script>
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/components/login/loginHandler.js"></script>
+    <script type="module" src="/components/login/loginState.js"></script>
+    <script type="module" src="/components/login/logOut.js"></script>
 </body>
 
 </html>
