로그인 구현 - localStorage를 이용하여 현재 로그인 상태를 저장 - 저장된 로컬스토리지를 통해서 html의 hidden요소 추가 및 제거

--- a/index.html
+++ b/index.html
@@ -215,5 +215,6 @@
     <script src="/components/menuBtn.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
+    <script src="/components/nav/navLoginTextControler.js"></script>
   </body>
 </html>
