--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -170,6 +170,7 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
+    <script src="/components/nav/navLoginTextControler.js"></script>
 </body>
 
 </html>
