--- a/pages/login.html
+++ b/pages/login.html
@@ -201,6 +201,7 @@
     <script type="module" src="/components/login/loginHandler.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
+    <script src="/components/nav/navLoginTextControler.js"></script>
 </body>
 
 </html>
