--- a/pages/about.html
+++ b/pages/about.html
@@ -208,5 +208,6 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
+    <script src="/components/nav/navLoginTextControler.js"></script>
 </body>
 </html>
