--- a/pages/signup.html
+++ b/pages/signup.html
@@ -238,6 +238,7 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
+    <script src="/components/nav/navLoginTextControler.js"></script>
 </body>
 
 </html>
